--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -15,20 +15,20 @@ th, td {
 
 <table style="width:60%" align="center">
   <tbody><tr>
-    <td>Link to Homework #1 </td>
-    <td>Link to Homework #2</td>
+    <td><a href="https://peizhenl.github.io/">Link to Homework #1</a>></td>
+    <td><a href="https://peizhenl.github.io/pz12pz12">Link to Homework #2</a></td>
   </tr>
   <tr>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #3</a></td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #4</a></td>
+    <td>Link to Homework #3</td>
+    <td>Link to Homework #4</td>
   </tr>
   <tr>
     <td>Link to Homework #5</td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #6</a></td>
+    <td>Link to Homework #6</td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #8</a></td>
+    <td>Link to Homework #8</td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
