--- a/hw3_PeizhenLi/page2.html
+++ b/hw3_PeizhenLi/page2.html
@@ -5,8 +5,9 @@
     <title>page2</title>
 </head>
 <body>
-<h2 id="About">About</h2>
-<h2 id="Projects">Projects</h2>
-<h2 id="Services">Services</h2>
+
+<section id="About"><h2>About</h2></section>
+<section id="Projects"><h2>Projects</h2></section>
+<section id="Services"><h2>Services</h2></section>
 </body>
 </html>
