--- a/hw3_PeizhenLi/page1.html
+++ b/hw3_PeizhenLi/page1.html
@@ -21,9 +21,9 @@
                <span>MENU</span>
            </div>
            <div class="nav">
-               <a href="page2.html" class="single">About</a>&ensp;&ensp;&nbsp;
-               <a href="page2.html" class="single">Projects</a>&ensp;&ensp;&nbsp;
-               <a href="page2.html" class="single">Services</a>
+               <a href="https://peizhenl.github.io/hw3_PeizhenLi/page2.html#about" class="single">About</a>&ensp;&ensp;&nbsp;
+               <a href="https://peizhenl.github.io/hw3_PeizhenLi/page2.html#projects" class="single">Projects</a>&ensp;&ensp;&nbsp;
+               <a href="https://peizhenl.github.io/hw3_PeizhenLi/page2.html#services" class="single">Services</a>
            </div>
        </div>
        <div class="reg">
