--- a/hw3_PeizhenLi/page2.html
+++ b/hw3_PeizhenLi/page2.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<section id="About"><h2>About</h2></section>
-<section id="Projects"><h2>Projects</h2></section>
-<section id="Services"><h2>Services</h2></section>
+<section id="about"><h2>About</h2></section>
+<section id="projects"><h2>Projects</h2></section>
+<section id="services"><h2>Services</h2></section>
 </body>
 </html>
