--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -19,7 +19,7 @@ th, td {
     <td><a href="https://peizhenl.github.io/pz12pz12">Link to Homework #2</a></td>
   </tr>
   <tr>
-    <td>Link to Homework #3</td>
+    <td><a href="https://peizhenl.github.io/hw3_PeizhenLi/page1.html">Link to Homework #3</a></td>
     <td>Link to Homework #4</td>
   </tr>
   <tr>
