--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -13,7 +13,7 @@ th, td {
 </head>
 <body data-new-gr-c-s-check-loaded="14.1027.0" data-gr-ext-installed="">
 
-<table style="width:60%" align="center">
+<table style="width:60%" alig="center">
   <tbody><tr>
     <td><a href="https://peizhenl.github.io/">Link to Homework #1</a>></td>
     <td><a href="https://peizhenl.github.io/pz12pz12">Link to Homework #2</a></td>
