--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -24,7 +24,8 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #5</td>
-    <td><a href="https://silent-bolt-327907.uw.r.appspot.com/">Link to Homework #6</a></td>
+    <td><a href="https://hw6web-12345.uw.r.appspot.com/">Link to Homework #6</a>
+        <br><a href="https://hw6web-12345.uw.r.appspot.com/">Link to Homework #6 API</a></td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
