--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -25,7 +25,7 @@ th, td {
   <tr>
     <td>Link to Homework #5</td>
     <td><a href="https://hw6web-12345.uw.r.appspot.com/">Link to Homework #6</a>
-        <br><a href="https://hw6web-12345.uw.r.appspot.com/">Link to Homework #6 API</a></td>
+        <br><a href="https://hw6web-12345.uw.r.appspot.com/">Link to Homework #6 sample</a></td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
