--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -25,7 +25,7 @@ th, td {
   <tr>
     <td>Link to Homework #5</td>
     <td><a href="https://pzweb-12345.uw.r.appspot.com/">Link to Homework #6</a>
-        <br><a href="https://myhw6-94534.uw.r.appspot.com/weather?street=Washington%20National%20Cathedral&city=Washington&state=Washington">Link to Homework #6 sample lat/long</a></td>
+        <br><a href="https://myhw6-94534.uw.r.appspot.com/weather?street=Washington%20National%20Cathedral&city=Washington&state=Washington">Link to Homework #6 Valid Query</a></td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
