--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -29,7 +29,7 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td>Link to Homework #8</td>
+    <td><a href="http://hw8fontend.de.r.appspot.com/">Link to Homework #8</a></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
