--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -29,7 +29,8 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href="http://hw8fontend.de.r.appspot.com/">Link to Homework #8</a></td>
+    <td><a href="http://hw8fontend.de.r.appspot.com/">Link to Homework #8</a>
+        <br><a href="https://hw8api-330410.uc.r.appspot.com/weather?location=34.0223519,-118.285117">Link to Homework #8 Valid Query</a></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
