--- a/pz12pz12.html
+++ b/pz12pz12.html
@@ -33,7 +33,8 @@ th, td {
         <br><a href="https://hw8api-330410.uc.r.appspot.com/weather?location=34.0223519,-118.285117">Link to Homework #8 Valid Query</a></td>
   </tr>
   <tr>
-    <td>Link to Homework #9</td>
+    <td><a href="https://hw9back-334405.uw.r.appspot.com/">Link to Homework #9</a>
+        <br><a href="https://hw9back-334405.uw.r.appspot.com/weather?location=34.0223519,-118.285117">Link to Homework #9 Valid Query</a></td></td>
     <td>Link to Homework #10</td>
   </tr>
   </tbody></table>
